ADDED: readme file main/doc; app's icons; | UPDATED: html and stylesheet files (style display issues fixed); | CONFIG: Progressive Web App (PWA) implemented;

--- a/style/responsive.css
+++ b/style/responsive.css
@@ -1,482 +1,1 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
-html, body {
-  height: 100%;
-}
-
-body {
-  font-family: Verdana, Arial, sans-serif;
-  word-spacing: 2px;
-  font-weight: normal;
-  font-style: normal;
-  background-color: #707E66;
-  display: flex;
-  flex-direction: column;
-}
-
-main {
-  display: flex;
-  flex-direction: column;
-  flex: 1;
-  background-color: #E7EBE3;
-  color: #000000;
-  padding: 6rem 0 0 0;
-}
-
-h1, h2 {
-  font-family: Georgia, Times, serif;
-  font-weight: normal;
-  font-style: normal;
-  font-weight: bold;
-  text-align: center;
-  margin: 1.5rem 0 0.75rem;
-}
-
-h1, h2 {
-  font-size: 1.75rem;
-}
-
-h1 {
-  letter-spacing: 0.1rem;
-}
-
-p {
-  width: 90%;
-  text-align: center;
-  line-height: 1.6rem;
-  margin: 0.75rem 0;
-}
-
-small {
-  display: inline-block;
-  font-size: 0.87rem;
-}
-
-.bold {
-  font-weight: bold;
-}
-
-header, footer {
-  background-color: #3C3730;
-}
-
-header {
-  height: 3rem;
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.header-div-left, .header-div-right {
-  flex: 1;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-.header-div-left {
-  justify-content: start;
-}
-
-.header-div-right {
-  justify-content: end;
-}
-
-.header-icon {
-  cursor: pointer;
-  margin: 0 0.5rem;
-}
-
-.menu-icon {
-  height: 2.3rem;
-}
-
-.search-icon, .modo-icon {
-  height: 1.5rem;
-}
-
-.notif-icon {
-  height: 1.8rem;
-}
-
-.ecoride-logo {
-  margin: auto;
-  display: block;
-}
-.ecoride-logo__header {
-  width: 7rem;
-}
-.ecoride-logo__footer, .ecoride-logo__side-menu--big {
-  width: 13rem;
-}
-.ecoride-logo__side-menu--small {
-  width: 9rem;
-  position: relative;
-  top: -2rem;
-}
-
-.fixed {
-  position: fixed;
-  top: 0;
-  width: 100%;
-}
-
-footer {
-  width: 100%;
-  padding: 2rem 10%;
-  color: #ffffff;
-}
-footer .ecoride-logo__footer {
-  margin-bottom: 1rem;
-}
-
-.footer-links-div {
-  margin: 2rem auto 1rem;
-  width: 100%;
-  text-align: center;
-}
-.footer-links-div a {
-  margin: 0.5rem 1rem;
-}
-.footer-links-div a:link {
-  color: #ffffff;
-  text-decoration: none;
-}
-.footer-links-div a:hover {
-  text-decoration: underline;
-}
-.footer-links-div a:active {
-  color: #CB974F;
-}
-.footer-links-div a:visited {
-  color: #CB974F;
-}
-
-.dropdown-menu {
-  background-color: #3C3730;
-  border: #1e1c18 solid 1px;
-}
-
-.dropdown-item {
-  height: 2.75rem;
-  color: rgba(255, 255, 255, 0.9);
-  background-color: #5E564C;
-  border: #303030 solid 1px;
-}
-.dropdown-item:hover, .dropdown-item:focus {
-  text-decoration: underline;
-}
-.dropdown-item:hover {
-  color: rgb(255, 255, 255);
-  background-color: #7a6852;
-}
-.dropdown-item:focus {
-  color: white;
-  border: #ffb700 solid 2px;
-  background-color: #665744;
-}
-.dropdown-item.active {
-  color: #ffffff;
-  text-decoration: underline;
-  font-weight: bold;
-  background-color: #495341;
-  border: #ffffff solid 1px;
-  cursor: default;
-}
-.dropdown-item.active:hover {
-  background-color: #495341;
-}
-
-#side-menu {
-  height: 100%;
-  background-color: #3C3730;
-  overflow: auto;
-  scrollbar-width: none;
-  -ms-overflow-style: none;
-}
-#side-menu::-webkit-scrollbar {
-  display: none;
-}
-
-.side-menu-header {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  color: #E7EBE3;
-}
-.side-menu-header p {
-  line-height: 1.5rem;
-  margin: auto;
-}
-
-#side-menu, .bottom-items {
-  width: 90%;
-  max-width: 21.88rem;
-}
-
-.side-menu-item {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  height: 2.75rem;
-  padding: 0 0 0 2rem;
-  color: rgba(255, 255, 255, 0.9);
-  text-decoration: none;
-  background-color: #5E564C;
-  border: #303030 solid 1px;
-}
-.side-menu-item:hover, .side-menu-item:focus {
-  text-decoration: underline;
-}
-.side-menu-item:hover {
-  color: rgb(255, 255, 255);
-  background-color: #7a6852;
-}
-.side-menu-item:focus {
-  color: white;
-  border: #ffb700 solid 2px;
-  background-color: #665744;
-}
-.side-menu-item.active {
-  color: #ffffff;
-  text-decoration: underline;
-  font-weight: bold;
-  background-color: #495341;
-  border: #ffffff solid 1px;
-  cursor: default;
-}
-.side-menu-item.active:hover {
-  background-color: #495341;
-}
-
-.bottom-items {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: end;
-}
-
-.close-button {
-  background: transparent;
-  border: none;
-  display: flex;
-  justify-content: end;
-  margin: 1rem 1rem 0 0;
-}
-
-.close-icon {
-  color: #ffffff;
-  width: 2rem;
-  height: 2rem;
-}
-
-.btn {
-  font-family: Georgia, Times, serif;
-  font-weight: normal;
-  font-style: normal;
-  margin: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.btn__green {
-  color: #000000;
-  background: #91AE7B;
-  border: #ffffff 2px solid;
-  box-shadow: 0 0 1.5rem 0.9rem rgba(0, 0, 0, 0.2);
-}
-.btn__green:hover, .btn__green:active {
-  color: #ffffff;
-  background: rgba(0, 0, 0, 0.7);
-  border: #8bd753 3px solid;
-  box-shadow: 0 0 1rem 0.6rem rgba(255, 255, 255, 0.2);
-}
-.btn__orange {
-  background: #CB974F;
-  border: 3px #6d4d20 solid;
-}
-.btn__orange:hover, .btn__orange:active {
-  border: 3px #573d1a solid;
-  background: #d59945;
-  box-shadow: 0 0.3rem 1rem 0.4rem rgba(0, 0, 0, 0.2);
-}
-.btn__light {
-  background: #B9C4AE;
-  border: #5d6b4e 1px solid;
-}
-.btn__light:hover, .btn__light:active {
-  border: 2px #4a563e solid;
-  background: #b9d0a2;
-}
-
-.btn-lg {
-  font-weight: bold;
-  height: 2.75rem;
-  width: 13.75rem;
-}
-
-.btn-thin {
-  height: 2.12rem;
-  width: 12.75rem;
-}
-
-.cta {
-  font-family: Georgia, Times, serif;
-  font-weight: normal;
-  font-style: normal;
-  font-size: 1.5rem;
-  letter-spacing: 0.1rem;
-  border-radius: 0.5rem;
-}
-.cta:hover {
-  scale: 1.1;
-}
-
-@media screen and (min-width: 768px) {
-  body {
-    font-size: 1.06rem;
-  }
-  h1, h2 {
-    font-size: 2.25rem;
-  }
-  p {
-    width: 85%;
-    text-align: justify;
-    line-height: 1.7rem;
-  }
-  .side-menu-item {
-    padding: 0 0 0 2.5rem;
-  }
-  .dropdown-menu {
-    font-size: 1.06rem;
-  }
-  .side-menu-header p {
-    text-align: center;
-  }
-  .ecoride-logo__header {
-    width: 8rem;
-  }
-  .ecoride-logo__side-menu--big, .ecoride-logo__footer {
-    width: 14rem;
-  }
-  header {
-    height: 3.25rem;
-  }
-  .header-icon {
-    margin: 0 0.75rem;
-  }
-  .menu-icon {
-    height: 2.4rem;
-  }
-  .search-icon, .modo-icon {
-    height: 1.7rem;
-  }
-  .notif-icon {
-    height: 2.1rem;
-  }
-  .header-div-left {
-    margin-left: 1rem;
-  }
-  .header-div-right {
-    margin-right: 1rem;
-  }
-  .footer-links-div {
-    margin: 1.5rem 0 1rem;
-  }
-  .hero {
-    background: url(../img/images/hero-medium_patrick-tomasso-5hvn-2WW6rY-unsplash.jpg) center no-repeat scroll;
-    background-size: cover;
-  }
-  .profil-content p {
-    text-align: center;
-  }
-  .btn-lg {
-    height: 3rem;
-    width: 15rem;
-  }
-}
-@media screen and (min-width: 992px) {
-  body {
-    font-size: 1.12rem;
-  }
-  main {
-    margin: 6rem 4rem 2rem;
-  }
-  h1 {
-    font-size: 3rem;
-  }
-  p {
-    width: 80%;
-  }
-  .ecoride-logo__header {
-    width: 9rem;
-  }
-  .ecoride-logo__side-menu--big, .ecoride-logo__footer {
-    width: 15rem;
-  }
-  .dropdown-item, .side-menu-item {
-    color: rgba(255, 255, 255, 0.7);
-  }
-  .dropdown-item:hover, .side-menu-item:hover {
-    color: rgb(255, 255, 255);
-  }
-  .side-menu-item {
-    padding: 0 0 0 3rem;
-  }
-  header {
-    height: 3.5rem;
-  }
-  .header-icon {
-    margin: 0 1rem;
-  }
-  .header-div-left {
-    margin-left: 2rem;
-  }
-  .header-div-right {
-    margin-right: 2rem;
-  }
-  footer {
-    padding: 2rem 20%;
-  }
-  .footer-links-div {
-    margin: 2rem 0;
-  }
-  .hero {
-    height: 90vh;
-    background: url(../img/images/hero-large_patrick-tomasso-5hvn-2WW6rY-unsplash.jpg) center no-repeat scroll;
-    background-size: cover;
-  }
-  .homepage-badge-img-1 {
-    width: 9.38rem;
-    height: 9.38rem;
-    margin: 1.5rem 0 0 3rem;
-  }
-  .homepage-badge-img-2 {
-    width: 8.13rem;
-    height: 8.13rem;
-  }
-  .cta {
-    font-size: 1.75rem;
-  }
-}
-@media screen and (max-width: 350px) {
-  .ecoride-logo__header {
-    display: none;
-  }
-  #side-menu, .bottom-items {
-    width: 100%;
-  }
-  .close-button {
-    transform: translateX(-2rem);
-  }
-}
-@media screen and (max-width: 230px) {
-  .modo-icon {
-    display: none;
-  }
-}/*# sourceMappingURL=responsive.css.map */
+body,main{display:flex}.footer-links-div,h1,h2,p{text-align:center}#side-menu,body,html{height:100%}#side-menu,.dropdown-menu,footer,header{background-color:#3c3730}.cta,h1{letter-spacing:.1rem}*{margin:0;padding:0}body{font-family:Verdana,Arial,sans-serif;word-spacing:2px;font-weight:400;font-style:normal;background-color:#707e66;flex-direction:column}.btn,.cta,h1,h2{font-family:Georgia,Times,serif;font-style:normal}.bold,h1,h2{font-weight:700}main{flex-direction:column;flex:1;background-color:#e7ebe3;color:#000}#main-homepage{margin:0;padding:4.4rem 0 5rem}#main-homepage p{width:90%}#main-userpage{margin:0;padding:8rem 0 0}#main-portal{margin:0;padding:6rem .5rem 5rem}h1,h2{margin:1.5rem 0 .75rem;font-size:1.75rem}p{line-height:1.6rem;margin:.75rem auto}small{display:inline-block;font-size:.87rem}header{height:3rem;width:100%;display:flex;flex-direction:row;align-items:center;justify-content:space-between}.header-div-left,.header-div-right{flex:1;display:flex;flex-direction:row;align-items:center}.header-div-left{justify-content:start}.header-div-right{justify-content:end}.header-icon{cursor:pointer;margin:0 .5rem}.menu-icon,.user-icon{height:2.3rem}.modo-icon,.search-icon{height:1.5rem}.notif-icon{height:1.8rem}.ecoride-logo{margin:auto;display:block}.ecoride-logo__header{width:7rem}.ecoride-logo__footer,.ecoride-logo__side-menu--big{width:13rem}.ecoride-logo__side-menu--small{width:9rem;position:relative;top:-2rem}.fixed{position:fixed;top:0;width:100%;z-index:100}footer{width:100%;padding:2rem 10%;color:#fff}footer .ecoride-logo__footer{margin-bottom:1rem}.footer-links-div{margin:2rem auto 1rem;width:100%}.footer-links-div a{margin:.5rem 1rem}.footer-links-div a:link{color:#fff;text-decoration:none}.dropdown-item:focus,.dropdown-item:hover,.footer-links-div a:hover,.side-menu-item:focus,.side-menu-item:hover{text-decoration:underline}.footer-links-div a:active,.footer-links-div a:visited{color:#cb974f}.dropdown-menu{border:1px solid}.dropdown-item,.side-menu-item{height:2.75rem;background-color:#5e564c;border:1px solid #303030}.dropdown-item{color:rgba(255,255,255,.9)}.dropdown-item:hover,.side-menu-item:hover{color:#fff;background-color:rgb(121.92,104.2133333333,82.08)}.dropdown-item:focus,.side-menu-item:focus{color:#fff;border:2px solid #ffb700;background-color:rgb(101.6,86.8444444444,68.4)}.dropdown-item.active,.side-menu-item.active{color:#fff;text-decoration:underline;font-weight:700;background-color:#495341;border:1px solid #fff;cursor:default}.dropdown-item.active:hover,.side-menu-item.active:hover{background-color:#495341}#side-menu{overflow:auto;scrollbar-width:none;-ms-overflow-style:none}#side-menu::-webkit-scrollbar{display:none}.side-menu-header{display:flex;flex-direction:column;justify-content:center;color:#e7ebe3}.side-menu-header p{line-height:1.5rem;margin:auto}#side-menu,.bottom-items{width:90%;max-width:21.88rem}.side-menu-item{display:flex;align-items:center;width:100%;padding:0 0 0 2rem;color:rgba(255,255,255,.9);text-decoration:none}.bottom-items{width:100%;display:flex;flex-direction:column;align-items:end}.close-button{background:0 0;border:none;display:flex;justify-content:end;margin:1rem 1rem 0 0}.close-icon{color:#fff;width:2rem;height:2rem}.btn{font-weight:400;margin:auto;display:flex;justify-content:center;align-items:center}.btn__green{color:#000;background:#91ae7b;border:2px solid #fff;box-shadow:0 0 1.5rem .9rem rgba(0,0,0,.2)}.btn__green:active,.btn__green:hover{color:#fff;background:rgba(0,0,0,.7);border:3px solid;box-shadow:0 0 1rem .6rem rgba(255,255,255,.2)}.btn__orange{background:#cb974f;border:3px solid;color:#000}.btn__orange:active,.btn__orange:hover{border:3px solid;background:rgb(213.4,152.6774193548,68.6);box-shadow:0 .3rem 1rem .4rem rgba(0,0,0,.2)}.btn__light{background:#b9c4ae;border:1px solid}.btn__light:active,.btn__light:hover{border:2px solid;background:rgb(185,207.8,162.2)}.btn-lg{font-weight:700;height:2.75rem;width:13.75rem}.btn-thin{height:2.12rem;width:12.75rem}.cta{font-weight:400;font-size:1.5rem;border-radius:.5rem}.cta:hover{scale:1.1}@media screen and (min-width:768px){.dropdown-menu,body{font-size:1.06rem}h1,h2{font-size:2.25rem}p{text-align:justify;line-height:1.7rem}#main-homepage p,#main-portal p{width:80%}.side-menu-item{padding:0 0 0 2.5rem}.profil-content p,.side-menu-header p{text-align:center}.ecoride-logo__header{width:8rem}.ecoride-logo__footer,.ecoride-logo__side-menu--big{width:14rem}header{height:3.25rem}.header-icon{margin:0 .75rem}.menu-icon,.user-icon{height:2.4rem}.modo-icon,.search-icon{height:1.7rem}.notif-icon{height:2.1rem}.header-div-left{margin-left:1rem}.header-div-right{margin-right:1rem}.footer-links-div{margin:1.5rem 0 1rem}.hero{background:url(../img/images/hero-medium_patrick-tomasso-5hvn-2WW6rY-unsplash.jpg) center/cover no-repeat}.btn-lg{height:3rem;width:15rem}.password-checklist{font-size:1rem}}@media screen and (min-width:992px){body{font-size:1.12rem}h1{font-size:3rem}#main-homepage{margin:7rem 8vw 5rem;padding-top:0}#main-portal{margin:7rem auto;padding-top:3rem}#main-userpage{margin:8rem 8vw 5rem;padding-top:3rem}.ecoride-logo__header{width:9rem}.ecoride-logo__footer,.ecoride-logo__side-menu--big{width:15rem}.dropdown-item,.side-menu-item{color:rgba(255,255,255,.7)}.dropdown-item:hover,.side-menu-item:hover{color:#fff}.side-menu-item{padding:0 0 0 3rem}header{height:3.5rem}.header-icon{margin:0 1rem}.header-div-left{margin-left:2rem}.header-div-right{margin-right:2rem}footer{padding:2rem 20%}.footer-links-div{margin:2rem 0}.hero{height:90vh;background:url(../img/images/hero-large_patrick-tomasso-5hvn-2WW6rY-unsplash.jpg) center/cover no-repeat}.homepage-badge-img-1{width:9.38rem;height:9.38rem;margin:1.5rem 0 0 3rem}.homepage-badge-img-2{width:8.13rem;height:8.13rem}.cta{font-size:1.75rem}}@media screen and (max-width:350px){.ecoride-logo__header{display:none}#side-menu,.bottom-items{width:100%}.close-button{transform:translateX(-2rem)}}@media screen and (max-width:230px){.modo-icon{display:none}}
