--- a/style/sass/pages.sass
+++ b/style/sass/pages.sass
@@ -68,14 +68,15 @@ $orange-primary: #CB974F
         margin: 0
     & h1
         text-shadow: 0 0 0.5rem #000000
-        margin: 0
+        margin: 0 0.5rem
+    & div
+        padding: 0 0.5rem
 
 .homepage-badge-img-1
     fill: #91AE7B
     width: 8.75rem //140px
     height: 8.75rem //140px
     flex: 0 0 auto //empêcher l'image de se déformer
-    margin: 1.5rem 1rem 0
 
 .homepage-badge-img-2
     width: 6.88rem //110px
@@ -94,6 +95,9 @@ $orange-primary: #CB974F
 .star-rating img
     width: 1rem
     margin: 0 0.25rem
+
+.user-description
+    width: 95%
 
     //partie inférieure
 
