--- a/style/sass/responsive.sass
+++ b/style/sass/responsive.sass
@@ -31,9 +31,10 @@ $desktop-font-size-body: 1.12rem //18px (optimal 16px < 20px)
     h1, h2
         font-size: 2.25rem //36px (max 40px)
     p
-        width: 85%
         text-align: justify
         line-height: 1.7rem //24px
+    #main-homepage p, #main-portal p
+        width: 80%
     
     // MENUS --------------------------------------------
     .side-menu-item
@@ -55,7 +56,7 @@ $desktop-font-size-body: 1.12rem //18px (optimal 16px < 20px)
         height: 3.25rem //52px (optimal 51 < 65px)
     .header-icon
         margin: 0 0.75rem
-    .menu-icon
+    .menu-icon, .user-icon
         height: 2.4rem
     .search-icon, .modo-icon
         height: 1.7rem
@@ -82,6 +83,10 @@ $desktop-font-size-body: 1.12rem //18px (optimal 16px < 20px)
         height: 3rem //48px
         width: 15rem //240px (48*5)
 
+    // FORM ------------------------------------
+    .password-checklist
+        font-size: 1rem
+
 // -------------------------------------------------
 // DESKTOP
 // -------------------------------------------------
@@ -90,12 +95,18 @@ $desktop-font-size-body: 1.12rem //18px (optimal 16px < 20px)
     // GLOBAL ------------------------------------------
     body
         font-size: $desktop-font-size-body
-    main
-        margin: 6rem 4rem 2rem
     h1
         font-size: 3rem //48px (max 56px)
-    p
-        width: 80%
+    #main-homepage
+        margin: 7rem 8vw 5rem
+        padding-top: 0
+    #main-portal
+        margin: 7rem auto
+        padding-top: 3rem
+    #main-userpage
+        margin: 8rem 8vw 5rem
+        padding-top: 3rem
+
     // ECORIDE LOGOS ------------------------------------
     .ecoride-logo
         &__header
